# digital-health-survival-casebook

./: .gitignore  .prettierignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-tag.yml
analysis/: 01_psychometrics.py  02_segmentation.py  04_outcome_duration.py  06_sms_reengagement.py  09_golden_paths.py  10_churn_ml.py  11_quit_anchored.py  12_recovery_monte_carlo.py  13_misspecification_recovery.py
data/synthetic/: followup_clean.csv  generation_metadata.json  profile_clean.csv  reengagement_clean.csv  registration_clean.csv  sms_clean.csv  spine.csv  survey_pilot_clean.csv  theta_latent.csv
docs/: REFERENCES.md
results/analysis/: 01_cfa_misspec_check.csv  01_efa_SDBS_oblimin.csv  01_efa_SSEQ_oblimin.csv  01_items_SDBS_Cons.csv  01_items_SDBS_Pros.csv  01_items_SSEQ_External.csv  01_items_SSEQ_Internal.csv  01_mars_reliability.csv  01_reliability.csv  01_sdbs_cfa_fit.csv  01_sdbs_cfa_loadings.csv  01_sdbs_invariance.csv  01_sdbs_pros_irt.csv  01_sseq_cfa_fit.csv  01_sseq_cfa_loadings.csv  02_km_curves.csv  02_segment_profiles.csv  02_silhouette.csv  02_stage_x_segment.csv  04_aft_weibull.csv  04_cox.csv  04_descriptives.csv  04_ols_log_duration.csv  04_ph_test.csv  06_event_study_frame.csv  06_logistic_return.csv  06_reengagement_logit.csv  06_segment_return_rates.csv  06_sms_status.csv  09_channel_outcome_corr.csv  09_markov_trans_all.csv  09_markov_trans_passive.csv  (+18 more)
tests/: test_generator_recovery.py  test_guards.py  test_misspecification_detection.py  test_parameter_recovery.py  test_recovery_gate_mutation.py
(+15 files in other folders)
