[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cessation-dht"
version = "0.1.0"
description = "Synthetic smoking-cessation digital-health cohort: methods demonstration"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "lifelines>=0.29",
    "statsmodels>=0.14",
    "semopy>=2.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "factor-analyzer>=0.5",
    "shap>=0.47",
    "numba>=0.59",
    "girth>=0.7",
]

[project.scripts]
cessation-generate = "cessation.synthetic.cli:generate"
cessation-validate = "cessation.synthetic.cli:validate"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pyright>=1.1",
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cessation"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# Scripts set matplotlib's backend (Agg) or extend sys.path for local package
# imports before other imports; both must precede the imports they gate.
[tool.ruff.lint.per-file-ignores]
"analysis/*.py" = ["E402"]
"src/cessation/synthetic/cli.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
markers = [
    "slow: expensive multi-seed power characterization (run with `pytest -m slow`); excluded from the fast CI gate",
]
